<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/congrats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/congrats"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/nameinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/place"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/score"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/place"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/buttonreset"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonreset"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/buttonexit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonexit"/>

</LinearLayout>