<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="170dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:text="@string/name"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/nameinput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:autofillHints=""
                android:background="@drawable/nameinput_border"
                android:inputType="text"
                android:padding="5dp"
                tools:ignore="LabelFor,TouchTargetSizeCheck,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

        </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/startbutton"/>

</LinearLayout>